Fixed background for dark mode on mac

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ html, body {
 }
 
 body {
+  background-color: #fff;
   font-family: 'PT Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
 }
